# Economic-Energy-Software

./: .env.example  .gitignore  LICENSE  README.md  app.py  mini_refinery_output.xlsx  pyproject.toml  run_app.bat  simple_psc_output.xlsx
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: index.md
docs/fiscal-reference/: psc-cost-recovery.md
examples/: mini_refinery.py  simple_psc.py
src/fiscal_model/: __init__.py
src/fiscal_model/economics/: __init__.py  depreciation.py  metrics.py
src/fiscal_model/fiscal/: __init__.py  base.py  gross_split.py  psc.py  tax.py
src/fiscal_model/models/: __init__.py  cashflow.py  production.py  scenario.py  sensitivity.py
src/fiscal_model/outputs/: __init__.py  charts.py  excel.py  pdf.py  styling.py
src/fiscal_model/schemas/: __init__.py  inputs.py  outputs.py
src/fiscal_model/utils/: __init__.py  formatting.py  validation.py
templates/inputs/: psc_sample.yaml
tests/test_economics/: test_metrics.py
tests/test_fiscal/: test_psc.py
tests/test_utils/: test_formatting.py
