[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiscal-model"
version = "0.1.0"
description = "Financial modeling library for Indonesian upstream oil & gas PSC, LNG, and energy projects — with BCG/McKinsey-styled Excel/PDF output."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Fikri Barry Alfian", email = "fikri.barry@rekaelang.co.id" },
]
maintainers = [
    { name = "Fikri Barry Alfian" },
]
keywords = [
    "financial-modeling",
    "psc",
    "production-sharing-contract",
    "oil-and-gas",
    "energy-economics",
    "indonesia",
    "cost-recovery",
    "gross-split",
    "npv",
    "irr",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "pydantic>=2.0",
    "numpy>=1.22",
    "numpy-financial>=1.0",
    "pandas>=1.5",
    "openpyxl>=3.1",
    "matplotlib>=3.6",
    "reportlab>=3.7",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "streamlit>=1.28",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.23",
]
examples = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
web = [
    "streamlit>=1.28",
]

[project.urls]
Homepage = "https://github.com/fikribarry/energi-economic-software"
Documentation = "https://fikribarry.github.io/energi-economic-software/"
Repository = "https://github.com/fikribarry/energi-economic-software"
Issues = "https://github.com/fikribarry/energi-economic-software/issues"
Changelog = "https://github.com/fikribarry/energi-economic-software/releases"

[tool.hatch.build.targets.wheel]
packages = ["src/fiscal_model"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "examples", "templates", "docs", "README.md", "LICENSE"]

# --- Ruff (linter & formatter) ---
[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# --- pytest ---
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=fiscal_model",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# --- mypy ---
[tool.mypy]
python_version = "3.9"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
files = ["src/fiscal_model"]

[[tool.mypy.overrides]]
module = ["numpy_financial.*", "openpyxl.*", "reportlab.*"]
ignore_missing_imports = true
